--- a/templates/rp/rp_list.html
+++ b/templates/rp/rp_list.html
@@ -3,7 +3,7 @@
 {% block content %}
 <ul>
 {% for item in object_list %}
-    <li>{{ item.url }}</li>
+    <li><a href="/admin/rp/rp/{{ item.id }}">{{ item.url }}</a></li>
 {% endfor %}
 </ul>
 {% endblock %}
