[enh] display cliquable url in update form template

--- a/templates/rp/rp_form.html
+++ b/templates/rp/rp_form.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<p><a href="{{ object.url }}">{{ object.url }}</a></p>
 <form action="" method="post">
     {% csrf_token %}
     <ul>
