[mod] don't display link to /fill/ anymore if list is empty

--- a/templates/rp/rp_list.html
+++ b/templates/rp/rp_list.html
@@ -31,6 +31,6 @@
 </div>
 
 {% else %}
-<p>Empty items, go <a href="{% url fill %}">here</a> to import data</p>
+<p>No links.</p>
 {% endif %}
 {% endblock %}
