[enh] add an archived page

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 <body>
 <div id="wrapper">
   <ul id="nav">
-      <li><a href="{% url rp_list %}">Manage latest links</a></li><li><a href="{% url rp_list_published %}">Published links</a></li><li><a href="#">Archives</a></li><li id="rss"><a href="{% url rss %}">RSS</a></li>
+      <li><a href="{% url rp_list %}">Manage latest links</a></li><li><a href="{% url rp_list_published %}">Published links</a></li><li><a href="{% url rp_list_archived %}">Archives</a></li><li id="rss"><a href="{% url rss %}">RSS</a></li>
   </ul>
 
   <div id="global">
