[enh] use django pagination

--- a/templates/rp/rp_list.html
+++ b/templates/rp/rp_list.html
@@ -1,8 +1,11 @@
 {% extends "base.html" %}
+{% load pagination_tags %}
 
 {% block content %}
 {% if object_list %}
 
+{% autopaginate object_list 25 %}
+{% paginate %}
     <table class="zebra-striped">
       <thead>
         <tr>
@@ -27,6 +30,9 @@
 
       </tbody>
     </table>
+
+{% paginate %}
+
   </div>
 </div>
 
