--- a/templates/base.html
+++ b/templates/base.html
@@ -24,10 +24,19 @@
 <script>window.jQuery || document.write('<script src="/static/js/libs/jquery-1.6.4.min.js">\x3C/script>')</script>
 <script>
 $(document).ready(function(){
-  $(".edit").hide();
-  $(".tweet").charCount();
-  $(".trigger").click(function(){
-    $(this).siblings('.edit').slideToggle();
+  $('.edit').hide();
+  $('.tweet').charCount();
+  $('.trigger').click(function(){
+    var
+      edit = $(this).siblings('.edit'),
+      url  = edit.find('.link').val(),
+      anch = $(this).parent().parent();
+
+    $('html, body').animate({ scrollTop: anch.offset().top }, 500);
+
+    if (edit.find('iframe').length == 0) { edit.find('.preview').append('<iframe src="' + url + '"></iframe>'); }
+
+    edit.slideToggle();
   });
 });
 </script>
