--- a/templates/rp/rp_list.html
+++ b/templates/rp/rp_list.html
@@ -85,6 +85,7 @@ $(document).ready(function(){
        var form = $(this);
        $.post("{% url save %}", $(this).serialize(), function(data) {
          if (data == "ok") {
+             form.parent().parent().parent().hide("slow");
          } else if (data == "nok") {
              form.parent().parent().find('div.info').append('<p>Error: can\'t get the object!</p>')
          } else if (data != "nok") {
