[fix] access the correct element of RP for langue in the list template

--- a/templates/rp/rp_list.html
+++ b/templates/rp/rp_list.html
@@ -30,7 +30,7 @@
                 <div style="display:none"><input type="hidden" value="{{ item.id }}" name="id"></div>
                 {% csrf_token %}
                 <p><label for="lang-{{ item.id }}">Language</label> <input type="text" name="lang" id="lang_{{ item.id }}" class="lang" value="{% if item.lang != None %}{{ item.langue }}{% else %}Loading...{% endif %}" /></p>
-                <p><label for="title-{{ item.id }}">Title</label> <textarea type="text" name="title" id="tweet_{{ item.id }}" class="tweet">{% if item.title != None and item.lang != None %}[{{ item.get_langue }}]{{ item.get_title }}{% else %}Loading...{% endif %}</textarea></p>
+                <p><label for="title-{{ item.id }}">Title</label> <textarea type="text" name="title" id="tweet_{{ item.id }}" class="tweet">{% if item.title != None and item.langue != None %}[{{ item.get_langue }}]{{ item.get_title }}{% else %}Loading...{% endif %}</textarea></p>
                 <p><label for="url-{{ item.id }}"><a href="{{ item.url }}">URL</a></label> <input type="text" name="url" id="url-{{ item.id }}" class="link" value="{{ item.url }}" /></p>
                 <p class="submit">
                   <span>
