--- a/templates/rp/rp_list.html
+++ b/templates/rp/rp_list.html
@@ -18,7 +18,11 @@
 {% for item in object_list %}
         <!-- new item -->
         <tr>
-          <td>{{ item.datetime|date:"d/m/Y" }}</td>
+          {% if item.published %}
+            <td>{{ item.published_date|date:"d/m/Y" }}</td>
+          {% else %}
+            <td>{{ item.datetime|date:"d/m/Y" }}</td>
+          {% endif %}
           <td>
             <p class="trigger">
             <span class="title" id="title_{{ item.id }}">{% if item.title != None %}{{ item.title }}{% else %}Loading...{% endif %}</span>
@@ -28,7 +32,7 @@
             <div class="edit">
               <form action="{% url save %}" method="post">
                 <p><label for="lang-{{ item.id }}">Language</label> <input type="text" name="lang" id="lang_{{ item.id }}" class="lang" value="{% if item.langue != None %}{{ item.langue }}{% else %}Loading...{% endif %}" /></p>
-                <p><label for="title-{{ item.id }}">Title</label> <textarea type="text" name="title" id="tweet_{{ item.id }}" class="tweet">{% if item.title != None and item.langue != None %}[{{ item.get_langue }}]{{ item.get_title }}{% else %}Loading...{% endif %}</textarea></p>
+                <p><label for="title-{{ item.id }}">Title</label> <textarea type="text" name="title" id="tweet_{{ item.id }}" class="tweet">{% if item.title != None %}{{ item.get_title }}{% else %}Loading...{% endif %}</textarea></p>
                 <p><label for="url-{{ item.id }}"><a href="{{ item.url }}">URL</a></label> <input type="text" name="url" id="url-{{ item.id }}" class="link" value="{{ item.url }}" /></p>
                 {% csrf_token %}
                 <p class="submit">
