--- a/templates/rp/rp_list.html
+++ b/templates/rp/rp_list.html
@@ -31,7 +31,7 @@
             <div class="info"></div>
             <div class="edit">
               <form action="{% url save %}" method="post">
-                <p><label for="lang-{{ item.id }}">Language</label> <input type="text" name="lang" id="lang_{{ item.id }}" class="lang" value="{% if item.langue != None %}{{ item.langue }}{% else %}Loading...{% endif %}" /></p>
+                <p><label for="lang-{{ item.id }}">Language</label> <input type="text" name="langue" id="lang_{{ item.id }}" class="lang" value="{% if item.langue != None %}{{ item.langue }}{% else %}Loading...{% endif %}" /></p>
                 <p><label for="title-{{ item.id }}">Title</label> <textarea type="text" name="title" id="tweet_{{ item.id }}" class="tweet">{% if item.title != None %}{{ item.get_title }}{% else %}Loading...{% endif %}</textarea></p>
                 <p><label for="url-{{ item.id }}"><a href="{{ item.url }}">URL</a></label> <input type="text" name="url" id="url-{{ item.id }}" class="link" value="{{ item.url }}" /></p>
                 {% csrf_token %}
